# sub-enum

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  delete.py  install_tools.sh  sub.py  sub_api.py  sub_enum.py
sub-enum/: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  targets.example.txt
sub-enum/src/sub_enum/: __main__.py  config.py  core.py  installers.py  tools.py  utils.py
sub-enum/tests/: test_tools.py  test_utils.py  test_utils_path.py
