[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sub-enum"
version = "0.1.0"
description = "Automated Subdomain Discovery Tool (Community Edition)"
readme = "README.md"
authors = [
  { name = "Tobias Guta", email = "mywebservices.preorder540@passinbox.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  # Runtime dependency used for terminal output formatting.
    "rich>=10.0.0",
]

[project.scripts]
sub-enum = "sub_enum.core:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
permutations = [
  "altdns>=1.0.0",
]

dev = [
  "pytest>=6.0",
  "pytest-mock",
  "black",
  "ruff",
  "mypy",
]
